# callchain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  corpus-baseline-compare.yml  corpus-baseline-refresh.yml  corpus-baseline.yml  corpus-maintenance.yml  label-sync.yml  post-release-smoke.yml  pr-autolabeler.yml  release-drafter.yml  release.yml  security-audit.yml  stale.yml  testpypi-rehearsal.yml
examples/: README.md
examples/cpp_library/: README.md
examples/cpp_library/include/: pipeline.hpp
examples/cpp_library/src/: metrics.cpp  pipeline.cpp
examples/python_service/: README.md
examples/python_service/service/: __init__.py  handlers.py  http.py
examples/python_service/service/repositories/: __init__.py  users.py
examples/python_service/tests/: test_http.py
examples/smoke_repo/: README.md
examples/smoke_repo/app/: __init__.py  math_ops.py
examples/ts_dashboard/: README.md
examples/ts_dashboard/src/: main.ts
legacy/: code_extractor.py  delete_chain_ends.py  enumerate_call_chains.py  pipeline_test_chain_delete.py  pycg_jedi_positions.py  quickstart.sh
legacy/scripts/: enumerate_call_chains.py  pycg_jedi_positions.py  run_scalpel_callgraph.py
scripts/: benchmark_corpus.py  bump_version.py  check_corpus.py  check_corpus_sources.py  check_release.py  compare_corpus_reports.py  install_smoke.py  materialize_corpus_source.py  refresh_corpus_source.py  render_release_corpus_state.py  sync_corpus_sources.py  verify_corpus_source_archive.py
src/callchain/: __init__.py  cli.py
src/callchain/core/: analyzer.py  cache.py  callgraph.py  chain_enum.py  config.py  models.py
src/callchain/devtools/: __init__.py  corpus.py  install_smoke.py  release.py
src/callchain/languages/: base.py  c_lang.py  cpp_lang.py  go_lang.py  java_lang.py  javascript_lang.py  python_lang.py  rust_lang.py
src/callchain/output/: dot_output.py  html_output.py  json_output.py  mermaid_output.py
test_repos/: README.md  corpus.toml  sources.toml
test_repos/smoke_repo/tests/: test_math_ops.py
tests/: conftest.py  test_analyzer.py  test_c_lang.py  test_cache.py  test_callgraph.py  test_cli.py  test_config.py  test_corpus_tooling.py  test_cpp_lang.py  test_examples.py  test_go_lang.py  test_install_smoke.py  test_java_lang.py  test_javascript_lang.py  test_metadata.py  test_output.py  test_python_lang.py  test_release_tooling.py  test_repository_files.py  test_rust_lang.py  test_typescript_lang.py
tests/fixtures/c/: advanced.c  math.c
tests/fixtures/cpp/: advanced.cpp  calculator.cpp
tests/fixtures/go/: main.go
tests/fixtures/java/: Calculator.java  MathUtils.java
tests/fixtures/javascript/: sample.js
tests/fixtures/python/: sample.py  utils.py
tests/fixtures/rust/: main.rs
tests/fixtures/typescript/: sample.ts
(+5 files in other folders)
